fixed up index pages

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -27,3 +27,14 @@
     margin-top: 20px;
   }
 }
+
+// events index
+
+#events-searchbar  {
+  // padding: 20px;
+}
+
+#events-index-grid {
+  text-align: center;
+  // padding: 15px;
+}
