--- a/app/views/notifier/_email.html.erb
+++ b/app/views/notifier/_email.html.erb
@@ -13,6 +13,7 @@
 							<header>
 								<h1>
 									<small>100 Motels Presents!</small> <br>
+									-]yup <br>
 									<%= l.event.artist %>
 								</h1>
 								<h5>
