--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,36 +1,42 @@
-<h1>Our Heroic Promoters</h1>
-
-<div class="container-fluid">
-
-	<div class="row-fluid">
-		<aside id="users-searchform" class="span4">
+<div class="container">
+	<div class="row">
+		<div class="span12">
+			<div class="page-header">
+				<h3>Lorem ipsum dolor sit amet</h3>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<aside id="users-searchform" class="span3">
 			<header>
 				<h3>Search Controls</h3>
 			</header>
 			<form>
 				<div>
-					<label>By Rating</label>
-					<input  type='range' min='0' max='50' value='0' autofocus="autofocus"/> <br>
-					<label>By City</label>
+					<label>Choose a City</label>
 				  <input results="10" type='search' autofocus="autofocus"/> <br>
-				  <label>By Shows</label>
-				  <input type='text' placeholder='Search Artist' autofocus="autofocus"/> <br>
-				  <label>By Age</label>
-				  <input type='text' placeholder='Search Promoter' autofocus="autofocus"/>
+				  <br>
+				  <h4>Filter your results</h4> <br>
+					<label>Filter By Rating</label>
+					<input  type='range' min='0' max='50' value='0' autofocus="autofocus"/> <br>
+				  <label>Filter By Activity</label>
+					<input  type='range' min='0' max='50' value='0' autofocus="autofocus"/> <br>
+				  <label>Filter By Fee</label>
+					<input  type='range' min='0' max='50' value='0' autofocus="autofocus"/> <br>
+				  <label>Filter By Average Attendance</label>
+					<input  type='range' min='0' max='50' value='0' autofocus="autofocus"/> <br>
+
 				</div>
 			</form>
 		</aside>
 
 
-		<section id="top-promoters" class="span8">
-				<header>
-
-				</header>
+		<section id="user-index-grid" class="span9">
 					<ul class="thumbnails">
 						<% @users.each do |user| %>
 						<li class="span3">
 							<a class="thumbnail" href="#">
-								<img src="http://placehold.it/360x240" alt="">
+								<img src="http://placehold.it/300x240" alt="">
 							</a>
 							<h3>Promoter Name</h3>
 							<p>Featuring a hero unit for a primary message and three supporting elements.</p>
