--- a/app/views/admin/base/index.html.erb
+++ b/app/views/admin/base/index.html.erb
@@ -1,3 +1,3 @@
-<%= link_to "Users", admin_users_path %>
+<%= link_to "Users Admin", admin_users_path %>
 Welcome to 100 Motel's Admin Lounge. Please enjoy your stay.
 hah?
