--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
           <a class="brand" href="#">100 Motels</a>
           <div class="nav-collapse">
             <ul class="nav">
-              <li class="active"><%= link_to "Home", root_path %></li>
+              <li class=""><%= link_to "Home", root_path %></li>
               <li><%= link_to "Events", events_path %></li>
               <li><%= link_to "Users", users_path %></li>
               <li><a href="#">Help</a></li>
