added info page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -135,7 +135,8 @@
 					</blockquote>
 					<div class="btn-group">
 					  <button class="btn btn-large btn-primary">Sign up!</button>
-					  <button class="btn btn-large">More Info</button>
+					  <%= link_to "More Info", info_path, class: "btn btn-large" %>
+					  <!-- <button class="btn btn-large"></button> -->
 					</div>
 				</div>
 			</section>
