--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -31,3 +31,22 @@
   padding-bottom: 20px;
   padding-top: -20px;
 }
+
+// Info
+
+// body {
+//   padding-bottom: 40px;
+//   padding-top: 60px;
+// }
+
+// .sidebar-nav-fixed {
+//   padding: 9px 0;
+//   position: fixed;
+//   left: 20px;
+//   top: 60px;
+//   width: 250px;
+// }
+
+// .row-fluid > .span-fixed-sidebar {
+//   margin-left: 290px;
+// }
