--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -4,49 +4,59 @@
       <div class="well sidebar-nav-fixed">
         <ul class="nav nav-list">
 
-          <li class="nav-header">Sidebar</li>
-          <li class="active"><a href="#">Link</a></li>
-          <li><a href="#">Link</a></li>
-          <li><a href="#">Link</a></li>
-          <li><a href="#">Link</a></li>
-          <li class="nav-header">Sidebar</li>
+          <li class="nav-header">About the Founder</li>
 
-          <li><a href="#">Link</a></li>
-          <li><a href="#">Link</a></li>
-          <li><a href="#">Link</a></li>
-          <li><a href="#">Link</a></li>
-          <li><a href="#">Link</a></li>
-          <li><a href="#">Link</a></li>
+          <li class="active"><a href="#">personal info</a></li>
+          <li><a href="#">hiring</a></li>
+          <li><a href="#">github</a></li>
+          <li><a href="#">blog</a></li>
+          <li class="nav-header">About 100 Motels</li>
 
-          <li class="nav-header">Sidebar</li>
-          <li><a href="#">Link</a></li>
-          <li><a href="#">Link</a></li>
-          <li><a href="#">Link</a></li>
+          <li><a href="#">Music</a></li>
+          <li><a href="#">Funding</a></li>
+          <li><a href="#">Revenue</a></li>
+          <li><a href="#">Promoter info</a></li>
+          <li><a href="#">Artist info</a></li>
+          <li><a href="#">Ticket info</a></li>
+
+          <li class="nav-header">Technical info</li>
+          <li><a href="#">Development</a></li>
+          <li><a href="#">Testing</a></li>
+          <li><a href="#">Security</a></li>
+          <li><a href="#">Deployment</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Doorman mobile app</a></li>
+          <li><a href="#">Stripe App API</a></li>
+
+          <li class="nav-header">Customer info</li>
+          <li><a href="#">Legal</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms of Service</a></li>
         </ul>
       </div><!--/.well -->
     </div><!--/span-->
 
     <div class="span9 span-fixed-sidebar">
       <div class="hero-unit">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+        <h1>Hi I'm Seo Cahill</h1>
+        <p>...the founder/developer of 100 Motels. This section of the site is for people who are interested in delving a bit deeper into the detail of this project. Maybe you're looking at hiring me or maybe you're interested in getting involved somehow.</p>
         <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
       </div>
       <div class="row-fluid">
 
         <div class="span4">
-          <h2>Heading</h2>
+          <h2>Music</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn" href="#">View details &raquo;</a></p>
         </div><!--/span-->
         <div class="span4">
-          <h2>Heading</h2>
+          <h2>How I test</h2>
 
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn" href="#">View details &raquo;</a></p>
         </div><!--/span-->
         <div class="span4">
-          <h2>Heading</h2>
+          <h2>Doorman</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn" href="#">View details &raquo;</a></p>
 
@@ -54,19 +64,19 @@
       </div><!--/row-->
       <div class="row-fluid">
         <div class="span4">
-          <h2>Heading</h2>
+          <h2>Accessing the API</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn" href="#">View details &raquo;</a></p>
 
         </div><!--/span-->
         <div class="span4">
-          <h2>Heading</h2>
+          <h2>Stripe integration</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn" href="#">View details &raquo;</a></p>
         </div><!--/span-->
         <div class="span4">
 
-          <h2>Heading</h2>
+          <h2>Edge Rails</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn" href="#">View details &raquo;</a></p>
         </div><!--/span-->
