--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
               <li class=""><%= link_to "Home", root_path %></li>
               <li><%= link_to "Events", events_path %></li>
               <li><%= link_to "Promoters", users_path %></li>
-              <li><a href="#">Help &Info</a></li>
+              <li><%= link_to "Help &Info", info_path %></li>
               <li class="dropdown">
                 <a href="" class="dropdown-toggle" data-toggle="dropdown">Cart (<%= cart_items(@cart) %>) <b class="caret"></b></a>
                 <ul class="dropdown-menu">
@@ -72,8 +72,8 @@
                 <% end %>
                 <ul class="dropdown-menu">
                   <li><a href="#">Account Settings</a></li>
-                  <li><a href="#">Profile</a></li>
-                  <li><a href="#">Promoter Menu</a></li>
+                  <li><a href="#">Public Profile</a></li>
+                  <li><a href="#">Promoter Admin</a></li>
                   <li class="divider"></li>
                   <li><%= link_to "Sign out", destroy_user_session_path, :method => 'delete' %></li>
                 </ul>
