--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -7,6 +7,7 @@
           <li class="nav-header">About the Founder</li>
 
           <li class="active"><a href="#">personal info</a></li>
+          <li><a href="#">WIP</a></li>
           <li><a href="#">hiring</a></li>
           <li><a href="#">github</a></li>
           <li><a href="#">blog</a></li>
