--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -123,7 +123,7 @@
 
 			<section id="promoter-apply">
 				<div class="well well-large">
-					<h3>Looking to put on Shows?...Apply to become a Full Member</h3>
+					<h3>Looking to put on Shows?...Apply to become a Member</h3>
 					<blockquote>
 						<p> Initially at least my idea is to vet prospective promoters as opposed to having a completely open community, although there is technically no reason to prevent the latter. There could be a fee for membership dependent on the level of promoter activity.</p><br>
 						<p>Ordinary users can choose to create an account with 100 Motels when purchasing tickets but for promoters there's a different process. </p>
