--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -39,14 +39,14 @@
 
     <div class="span9 span-fixed-sidebar">
       <div class="hero-unit">
-        <h1>Hi I'm Seo Cahill</h1>
+        <h2>Hi I'm Seosamh</h2>
         <p>...the founder/developer of 100 Motels. This section of the site is for people who are interested in delving a bit deeper into the detail of this project. Maybe you're looking at hiring me or maybe you're interested in getting involved somehow.</p>
         <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
       </div>
       <div class="row-fluid">
 
         <div class="span4">
-          <h2>Music</h2>
+          <h2>Project status</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn" href="#">View details &raquo;</a></p>
         </div><!--/span-->
