--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,8 +70,8 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %><b class="caret"></b></a>
                 <% end %>
                 <ul class="dropdown-menu">
-                  <li><a href="#">Account Settings</a></li>
-                  <li><a href="#">Public Profile</a></li>
+                  <li><%= link_to "Account Settings", edit_user_registration_path %></li>
+                  <li><%= link_to "Public Profile", current_user %></li>
                   <li><a href="#">Promoter Admin</a></li>
                   <li class="divider"></li>
                   <li><%= link_to "Sign out", destroy_user_session_path, :method => 'delete' %></li>
