--- a/app/views/layouts/stripe.html.erb
+++ b/app/views/layouts/stripe.html.erb
@@ -11,7 +11,7 @@
     <%= stylesheet_link_tag    "application", :media => "all" %>
     <%= javascript_include_tag "https://js.stripe.com/v1/", "application" %>
     <%= csrf_meta_tags %>
-    <%= tag :meta, :name => "stripe-key", :content => current_user.public_key %>
+    <%= tag :meta, :name => "stripe-key", :content => @promoter.public_key %>
     <!--if [lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif-->
