--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,9 +61,6 @@
                 <li><%= link_to "Sign up", new_user_registration_path %></li>
                 <li><%= link_to "Sign in", new_user_session_path %></li>
               <% end %>
-              <% admins_only do %>
-                <li><%= link_to "Admin", admin_root_path %></li>
-              <% end %>
               <li class="divider-vertical"></li>
               <li class="dropdown">
                 <% if user_signed_in? %>
@@ -72,7 +69,7 @@
                 <ul class="dropdown-menu">
                   <li><%= link_to "Account Settings", edit_user_registration_path %></li>
                   <li><%= link_to "Public Profile", current_user %></li>
-                  <li><a href="#">Promoter Admin</a></li>
+                  <li> <%= link_to "Promoter Admin", admin_root_path %>  </li>
                   <li class="divider"></li>
                   <li><%= link_to "Sign out", destroy_user_session_path, :method => 'delete' %></li>
                 </ul>
