--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,7 +69,7 @@
                 <ul class="dropdown-menu">
                   <li><%= link_to "Account Settings", edit_user_registration_path %></li>
                   <li><%= link_to "Public Profile", current_user %></li>
-                  <li> <%= link_to "Promoter Admin", admin_root_path %>  </li>
+                  <li> <%= link_to "Promoter Admin", promoter_root_path %>  </li>
                   <li class="divider"></li>
                   <li><%= link_to "Sign out", destroy_user_session_path, :method => 'delete' %></li>
                 </ul>
