--- a/app/views/promoter/events/show.html.erb
+++ b/app/views/promoter/events/show.html.erb
@@ -1,4 +1,8 @@
-<h2><%= @user %></h2>
-<%= link_to "Edit User", edit_admin_user_path(@user) %>
-<%= link_to "Delete User", admin_user_path(@user), :method => :delete, :data => {:confirm => "Are you sure you want to delete this user?"}
- %>
+<h2><%= @event.artist %></h2>
+
+<h4>Customers</h4>
+<ul><% @orders.each do |order| %>
+  <li> <%= order.name %> </li>
+  <% end %>
+</ul>
+
