--- a/app/views/promoter/events/show.html.erb
+++ b/app/views/promoter/events/show.html.erb
@@ -1,8 +1,27 @@
-<h2><%= @event.artist %></h2>
+<div class="page-header"><h3><%= @event.artist %> in <%= @event.venue %> on <%= @event.date %></h3></div>
 
 <h4>Customers</h4>
-<ul><% @orders.each do |order| %>
-  <li> <%= order.name %> </li>
-  <% end %>
-</ul>
 
+
+<table class="table table-striped table-bordered">
+  <thead>
+    <tr>
+      <th>Customer Name</th>
+      <th>Email</th>
+      <th>Ticket Admits:</th>
+      <th>Total Price</th>
+      <th>Status</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @orders.each do |order| %>
+    <tr>
+      <td><%= order.name %> </td>
+      <td><%= order.email %> </td>
+      <td>TODO </td>
+      <td><%= order.total %> </td>
+      <td> pending </td>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
