--- a/app/views/promoter/events/show.html.erb
+++ b/app/views/promoter/events/show.html.erb
@@ -2,7 +2,7 @@
 
 <h4>Customers</h4>
 
-
+<%= will_paginate @line_items %>
 <table class="table table-striped table-bordered">
   <thead>
     <tr>
@@ -20,7 +20,7 @@
       <td><%= item.order.email %> </td>
       <td> <%= item.quantity %> </td>
       <td><%= item.order.total %> </td>
-      <td> pending </td>
+      <td> <span class="label label-warning">pending</span> </td>
     </tr>
     <% end %>
   </tbody>
