--- a/app/views/promoter/events/show.html.erb
+++ b/app/views/promoter/events/show.html.erb
@@ -1,7 +1,11 @@
 <div class="page-header"><h3><%= @event.artist %> in <%= @event.venue %> on <%= @event.date %></h3></div>
 
 <h4>Customers</h4>
-<p><%= link_to "Attendace List PDF", promoter_event_path(@event, format: "pdf"), class: "btn btn-medium" %></p>
+<div class="btn-group">
+  <%= link_to "Home", promoter_root_path, class: "btn btn-medium" %>
+  <%= link_to "Charge All", root_path, class: "btn btn-medium", data: { confirm: 'Are you sure? 100 Motels and Stripe fees will be applied and are non-refundable?' } %>
+  <%= link_to "PDF", promoter_event_path(@event, format: "pdf"), class: "btn btn-medium" %>
+</div>
 <%= will_paginate @line_items %>
 <table class="table table-striped table-bordered">
   <thead>
