--- a/app/views/promoter/events/show.html.erb
+++ b/app/views/promoter/events/show.html.erb
@@ -3,9 +3,26 @@
 <h4>Customers</h4>
 <div class="btn-group">
   <%= link_to "Home", promoter_root_path, class: "btn btn-medium" %>
-  <%= link_to "Charge All", root_path, class: "btn btn-medium", data: { confirm: 'Are you sure? 100 Motels and Stripe fees will be applied and are non-refundable?' } %>
+  <a href="#charge" role="button" class="btn btn-medium" data-toggle="modal">Charge all</a>
   <%= link_to "PDF", promoter_event_path(@event, format: "pdf"), class: "btn btn-medium" %>
 </div>
+
+<div class="modal hide fade" id="charge" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
+    <h3>Are you sure?</h3>
+  </div>
+  <div class="modal-body">
+    <p>If you continue you will charge all your customers, the proceeds will be depositied into your bank account 7 days in seven days minus 100 Motel's and Stripe's fees which are <strong>non-refundable</strong></p>
+    <p>If this is your first event please make sure you have read the <a href="">Terms and Conditions</a> and the <a href="">Getting started guide</a></p>
+    <p>We also strongly advise you to <a href="">sign a contract</a> with your Artists, a contract template is provided in the Getting started section.</p>
+  </div>
+  <div class="modal-footer">
+    <a href="#" class="btn" data-dismiss="modal">Cancel</a>
+    <a href="#" class="btn btn-primary">Charge All</a>
+  </div>
+</div>
+
 <%= will_paginate @line_items %>
 <table class="table table-striped table-bordered">
   <thead>
