added extra attributes to the events table

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
       <a href="#" id="stroke"></a>
       <h1 class="page-header">
         100 Motels
-        <small>We organize live music.</small>
+        <small>organize live music together</small>
       </h1>
       <a href="#" id="logo"></a>
     </header>
