--- a/app/views/promoter/events/index.html.erb
+++ b/app/views/promoter/events/index.html.erb
@@ -6,18 +6,26 @@
   </div>
 </div>
 <div class="row">
-  <div class="span10">
+  <div class="span12">
     <table class="table table-striped">
       <thead>
+        <tr>
+          <th>Artist</th>
+          <th>Venue</th>
+          <th>Date</th>
+          <th>Attending</th>
+        </tr>
       </thead>
       <tbody>
         <% @events.each do |event| %>
         <tr>
-          <td><%= link_to event.artist, [:promoter, event], class: "p lead" %></td>
+          <td><%= link_to event.artist, [:promoter, event], class: "" %></td>
           <td> <%= event.venue %> </td>
-          <td> <%= event.date %> </td>
+          <td> <%= time_tag event.date %> </td>
+          <td> <%= event.line_items.to_a.sum { |item| item.quantity} %> </td>
           <td >
             <div class="btn-group pull-right">
+              <%= link_to "Show", event_path(event), class: "btn" %>
               <%= link_to "Edit", edit_promoter_event_path(event), class: "btn" %>
               <%= link_to "Delete", edit_promoter_event_path(event), class: "btn" %>
               <%= link_to "Archive", edit_promoter_event_path(event), class: "btn" %>
