--- a/app/views/promoter/events/_form.html.erb
+++ b/app/views/promoter/events/_form.html.erb
@@ -7,7 +7,12 @@
     <%= f.input :artist %>
     <%= f.input :venue %>
     <%= f.input :date %>
+    <%= f.input :doors %>
     <%= f.input :ticket_price %>
+    <%= f.input :about %>
+    <%= f.input :video %>
+    <%= f.input :music %>
+    <%= f.input :image %>
 
     <div class="form-actions">
         <%= f.submit nil, class: "btn btn-primary" %>
