placeholders if attribs not present

--- a/app/views/promoter/events/_form.html.erb
+++ b/app/views/promoter/events/_form.html.erb
@@ -9,6 +9,7 @@
     <%= f.input :date %>
     <%= f.input :doors %>
     <%= f.input :ticket_price %>
+    <%= f.input :target %>
     <%= f.input :about %>
     <%= f.input :video %>
     <%= f.input :music %>
