--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -7,7 +7,7 @@
 		<div class="row">
 			<div class="label-box">Ticket Info</div>
 				<div class="span3">
-					<!-- <img src="//placehold.it/300&text=Artist"> -->
+					<img src="//placehold.it/300&text=Artist">
 				</div>
 				<div class="span5">
 					<div class="row">
@@ -59,7 +59,7 @@
 				<div class="label-box">Your Promoter</div>
 					<div class="row">
 						<div class="span12">
-							<!-- <img src="//placehold.it/100" class="align_left"> -->
+							<img src="//placehold.it/100" class="align_left">
 							<p class="lead">
 								Lorem ipsum <%= User.find_by_id(@event.promoter_id).email %>...
 							</p>
@@ -85,21 +85,34 @@
 		<div class="row">
 			<div class="span4">
 				<p class="lead">
-					I first heard Hannah Ward ....
+					A word from you promoter ....
 				</p>
-					<%= @event.about %>
 				<p>
+					<% if @event.about %>
+						<%= @event.about  %>
+					<% else %>
+						<%= render 'body_holder' %>
+					<% end %>
 				</p>
 				<p class="lead">Grazia, Marco!</p>
 			</div>
 			<div class="span6">
 				<h3>
 					Watch....
-					<%= @event.video_html %>
+					<% if @event.video_html %>
+						<%= @event.video_html  %>
+					<% else %>
+						<img src="//placehold.it/630x430&text=Vimeo" class="align_center">
+					<% end %>
 				</h3>
 				<h3>
 					Listen....
-					<%=@event.music_html %>
+					<% if @event.music_html %>
+						<%= @event.music_html  %>
+					<% else %>
+						<img src="//placehold.it/565x170&text=Soundcloud+playlist" class="align_left">
+					<% end %>
+
 				</h3>
 				<div class="well">
 					<div class="btn-toolbar">
