--- a/app/views/promoter/events/_form.html.erb
+++ b/app/views/promoter/events/_form.html.erb
@@ -6,6 +6,7 @@
 
     <%= f.input :artist %>
     <%= f.input :venue %>
+    <%= f.input :venue_capacity %>
     <%= f.input :date %>
     <%= f.input :doors %>
     <%= f.input :ticket_price %>
