--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -13,7 +13,11 @@
 		<div class="row">
 			<div class="label-box">Ticket Info</div>
 				<div class="span3">
-					<img src="//placehold.it/300&text=Artist">
+					<% if @event.image %>
+						<%= filepicker_image_tag @event.image, w: 300, h: 300, fit: 'clip' %>
+					<% else %>
+						<img src="//placehold.it/300&text=Artist">
+					<% end %>
 				</div>
 				<div class="span5">
 					<div class="row">
@@ -120,6 +124,7 @@
 					<% end %>
 
 				</h3>
+					<h3>Help out...</h3>
 				<div class="well">
 					<div class="btn-toolbar">
 					  <div class="btn-group centered-box">
