--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     	<% end %>
     </title>
     <%= stylesheet_link_tag    "application", :media => "all" %>
+    <%= filepicker_js_include_tag %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
     <!--if [lt IE 9]>
