--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -56,7 +56,11 @@
 									<% @events.each do |event| %>
 									<li class="span4">
 										<div class="thumbnail">
-											<img src="http://placehold.it/360x240&text=ArtistPic" alt="">
+											<% if event.image %>
+												<%= filepicker_image_tag @event.image, w: 360, h: 240, fit: 'clip' %>
+											<% else %>
+												<img src="http://placehold.it/360x240&text=ArtistPic" alt="">
+											<% end %>
 											<div class="caption">
 												<h4 class="title">
 													<%= event.artist %>
