--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -34,7 +34,7 @@
 									<% @events.each do |event| %>
 									<li class="span4">
 										<div class="thumbnail">
-											<img src="http://placehold.it/360x240&text=ArtistPic" alt="">
+											<img src="http://quickimage.it/360x240&text=ArtistPic" alt="">
 											<div class="caption">
 												<h4 class="title">
 													<%= event.artist %>
@@ -59,7 +59,7 @@
 											<% if event.image %>
 												<%= filepicker_image_tag @event.image, w: 360, h: 240, fit: 'clip' %>
 											<% else %>
-												<img src="http://placehold.it/360x240&text=ArtistPic" alt="">
+												<img src="http://quickimage.it/360x240&text=ArtistPic" alt="">
 											<% end %>
 											<div class="caption">
 												<h4 class="title">
@@ -90,7 +90,7 @@
 									<% @users.each do |user| %>
 									<li class="span3">
 										<div class="thumbnail">
-											<img src="http://placehold.it/360x240&text=PromoterPic">
+											<img src="http://quickimage.it/360x240&text=PromoterPic">
 											<div class="caption">
 												<h3 class="title"> Promoter Name</h3>
 												<h4>Location</h4>
@@ -110,7 +110,7 @@
 									<% @users.each do |user| %>
 									<li class="span3">
 										<a class="thumbnail" href="#">
-											<img src="http://placehold.it/360x240&text=PromoterPic" alt="">
+											<img src="http://quickimage.it/360x240&text=PromoterPic" alt="">
 										</a>
 										<h3 class="title"> Promoter Name</h3>
 										<p>
