--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -3,10 +3,8 @@
 		<% title(@event.artist, "Events") %>
 	</header>
 	<div>
-		<% if user_signed_in? %>
-			<%= link_to "Edit Event", edit_promoter_event_path(@event) %>
-			<%= current_user.id %>,
-			<%= @event.promoter_id %>
+		<% if user_signed_in? && current_user == @promoter %>
+			<%= link_to "Edit Your Event", edit_promoter_event_path(@event), class: "btn btn-inverse" %>
 		<% end %>
 	</div>
 	<section id="event-info" class="section-box">
@@ -69,9 +67,13 @@
 				<div class="label-box">Your Promoter</div>
 					<div class="row">
 						<div class="span12">
-							<img src="//quickimage.it/100" class="align_left">
+							<% if @promoter.avatar %>
+								<%= filepicker_image_tag @promoter.avatar, w: 100, h: 100, fit: 'crop', class: "align-left" %>
+							<% else %>
+								<img src="//quickimage.it/100" class="align_left">
+							<% end %>
 							<p class="lead">
-								Lorem ipsum <%= User.find_by_id(@event.promoter_id).email %>...
+								Lorem ipsum <%= @promoter.name %>...
 							</p>
 							<p>
 								Consectetur adipisicing elit, sed do eiusmod
@@ -79,7 +81,7 @@
 								quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 							consequat.
 							</p>
-							<button>Full Profile</button>
+								<%= link_to "Full Profile", user_path(@promoter), class: "btn btn-medium" %>
 						</div>
 					</div>
 					<div class="row">
