--- a/app/views/events/_body_holder.html.erb
+++ b/app/views/events/_body_holder.html.erb
@@ -1,4 +1,6 @@
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				<p class="lead">Lorem ipsum dolor <%= @event.artist %>... </p>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 					consequat.
@@ -31,3 +33,5 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				</p>
+				<p class="lead"> Thanks and see you at the show! <br> <%= @promoter.name %></p>
