--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
               <li><%= link_to "Events", events_path %></li>
               <li><%= link_to "Promoters", users_path %></li>
               <li><%= link_to "Help &Info", info_path %></li>
-              <li class="dropdown">
+              <!-- <li class="dropdown">
                 <a href="" class="dropdown-toggle" data-toggle="dropdown">Cart (<%= cart_items(@cart) %>) <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li><%= link_to "View Cart", @cart %></li>
@@ -53,7 +53,7 @@
                   <li><a href="#">Security</a></li>
                   <li><a href="#">Terms and Conditions</a></li>
                 </ul>
-              </li>
+              </li> -->
             </ul>
             <form class="navbar-search pull-left" action="">
               <input type="text" class="search-query span3" placeholder="Search for an Event, City, Artist or Promoter">
